# rule-tracker

./: .gitattributes  .gitignore  CLAUDE.md  KICKOFF.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
corpus/: README.md
corpus/2022-23873/: api.json  sections.json  text.txt
corpus/2023-14624/: api.json  sections.json  text.txt
corpus/2023-24184/: api.json  sections.json  text.txt
docs/: CAPABILITIES.md  SPEC.md  STATUS.md  TALKING-POINTS.md
docs/decisions/: ADR-001-xml-over-pdf.md  ADR-002-triplet-corpus.md  ADR-003-constrained-rule-schema.md  ADR-004-no-orchestration-framework.md  TEMPLATE.md
docs/phases/: phase-0-ingestion.md  phase-1-extraction.md  phase-2-eval.md  phase-3-lineage.md  phase-4-readme.md
docs/retrospectives/: TEMPLATE.md  phase-0-retro.md
docs/review/: PACKAGE-TEMPLATE.md  RESPONSE-TEMPLATE.md  phase-0-package-addendum.md  phase-0-package.md  phase-0-response.md
runs/phase-0/: ingest.txt  lint.txt  unit.txt
src/: config.py
src/ingest/: fetch.py  inspect.py  run.py  sections.py  spotcheck.py
tests/integration/phase-0/: MANUAL.md  test_corpus_artifacts.py
tests/unit/: test_fetch.py  test_freeze.py  test_normalize.py  test_sections.py
